# fastapi_todo_demo

./: .envrc  README.md  alembic.ini  pyproject.toml  setup.cfg  tox.ini
fastapi_todo/: app.py  db.py
fastapi_todo/crud/: todo_crud.py  user_crud.py
fastapi_todo/migrations/: env.py
fastapi_todo/migrations/versions/: 37acefc6575e_initial.py  f909fe7979c6_add_hashed_password.py
fastapi_todo/models/: __init__.py  todomodel.py  usermodel.py
fastapi_todo/schemas/: todo_schemas.py  token_schemas.py  user_schemas.py
fastapi_todo/utils/: security.py
fastapi_todo/views/: todo_views.py  user_views.py
postman/: thunder-collection_fastapi_todo.json
tests/: conftest.py
tests/views/: test_todo_views.py
